--- a/rayas.html
+++ b/rayas.html
@@ -20,8 +20,8 @@
             
         </div>
         <div class="rayas">
-            <div id="1" onclick="ponerFicha1()"></div>
-            <div id="2" onclick="ponerFicha2()"></div>
+            <div id="1" onclick="ficha1()"></div>
+            <div id="2" onclick="ficha2()"></div>
             <div id="3" onclick="ponerFicha3()"></div>
             <div id="4" onclick="ponerFicha4()"></div>
             <div id="5" onclick="ponerFicha5()"></div>
