--- a/rayas.html
+++ b/rayas.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rayas</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    
 </head>
 
 <body onload="jugadorS()">
@@ -20,21 +20,26 @@
             
         </div>
         <div class="rayas">
-            <div id="1" onclick="ficha1()"></div>
-            <div id="2" onclick="ficha2()"></div>
-            <div id="3" onclick="ponerFicha3()"></div>
-            <div id="4" onclick="ponerFicha4()"></div>
-            <div id="5" onclick="ponerFicha5()"></div>
-            <div id="6" onclick="ponerFicha6()"></div>
-            <div id="7" onclick="ponerFicha7()"></div>
-            <div id="8" onclick="ponerFicha8()"></div>
-            <div id="9" onclick="ponerFicha9()"></div>
+            <div id="1" onclick="ponerFicha(0,1)"></div>
+            <div id="2" onclick="ponerFicha(1,2)"></div>
+            <div id="3" onclick="ponerFicha(2,3)"></div>
+            <div id="4" onclick="ponerFicha(3,4)"></div>
+            <div id="5" onclick="ponerFicha(4,5)"></div>
+            <div id="6" onclick="ponerFicha(5,6)"></div>
+            <div id="7" onclick="ponerFicha(6,7)"></div>
+            <div id="8" onclick="ponerFicha(7,8)"></div>
+            <div id="9" onclick="ponerFicha(8,9)"></div>
         </div>
+
+        <button onclick="reset()">RESET</button>
+
     </div>
 
     <footer>
-        © Raul Rodriguez Cebrian
+        © Raul Rodriguez Cebrian<br>
+        (cebriian95)
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
